@@ -1,5 +1,6 @@
 Changes for 1.6.6
 
+ - [DEV-417] added services[] metric for Windows agents (Sasha)
  - [ZBX-1005] fixed evaluations of functions diff, change and abschange for character items if received value more than 255 characters (Sasha)
  - [ZBX-1004] made snmp parameters editable in templated items (Artem)
  - [ZBX-1001] fixed possible server crash while processing macros {ITEM.LASTVALUE} (Sasha)
